# Dimensions

./: CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: ci.yml
cmake/: DimensionsConfig.cmake.in
docs/: mainpage.md
examples/: CMakeLists.txt  ex1.cpp
include/Dimensions/: Dimensions.hpp
tests/: CMakeLists.txt  test_dimensions.cpp
